--- a/projects.html
+++ b/projects.html
@@ -1,1 +1,12 @@
-Bellow I will share my projects
+<!-- about.html -->
+<!DOCTYPE html>
+<html>
+<head>
+  <title>About Me</title>
+</head>
+<body>
+  <h1>About</h1>
+  <p>This page tells you more about me.</p>
+  <a href="index.html">Back to Home</a>
+</body>
+</html>
