--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>My Website</title>
-  </head>
-  <body>
-    <h1>Welcome!</h1>
-    <p>This is my homepage.</p>
-    <a href="about.html">Go to About Page</a>
-  </body>
+<head>
+  <title>G.Nourmous</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <h1>🌟 G.Nourmous</h1>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="projects.html">Projects</a>
+    <a href="big-ideas.html">Big Ideas</a>
+    <a href="documentation.html">Documentation</a>
+    <a href="swift-code.html">Swift Code</a>
+  </nav>
+  <section>
+    <h2>About Me</h2>
+    <p>I’m a curious mind exploring the intersection of creativity and code. This site is my digital playground.</p>
+  </section>
+  <section>
+    <h2>Recently...</h2>
+    <p>→ Started building this site to share my ideas and projects with the world.</p>
+  </section>
+</body>
 </html>
