--- a/big-ideas.html
+++ b/big-ideas.html
@@ -15,7 +15,7 @@
   </nav>
   <section>
     <h2>Thoughts Worth Sharing</h2>
-    <p>Here I explore concepts like digital minimalism, ethical AI, and the future of human-computer interaction.</p>
+    <p>1. AP CSP Coding Collabration In AP CSP class we attempted making a machine that was able to do 5 basic calculations (addition, multiplication, division, subtraction, modulo) with the numbers entered by the user. We made this app in pairs, while one of us worked the other one was checking the code and was giving advice while roles switched out every 5 minutes. This way we very little errors which we fixed very quickly and made a working code. It had benefit compared to coding alone, it made better results in shorter time.</p>
   </section>
 </body>
 </html>
