--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>G.Nourmous</title>
+  <title>Ömer Erdoğan</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>🌟 G.Nourmous</h1>
+  <h1>🌟 Ömer Erdoğan</h1>
   <nav>
     <a href="index.html">Home</a>
     <a href="projects.html">Projects</a>
@@ -15,7 +15,7 @@
   </nav>
   <section>
     <h2>About Me</h2>
-    <p>I’m a curious mind exploring the intersection of creativity and code. This site is my digital playground.</p>
+    <p>My name is Ömer Erdoğan I currently study at Hisar School in Türkiye. I am 10th grade. I am interested in enviormental subject politics, law and such but I have been more workig on STEM subjects. Such as climate and sustainability, Robot making, and other related things.</p>
   </section>
   <section>
     <h2>Recently...</h2>
