--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>🌟 Ömer Erdoğan</h1>
+  <h1> Ömer Erdoğan</h1>
   <nav>
     <a href="index.html">Home</a>
     <a href="projects.html">Projects</a>
@@ -19,7 +19,7 @@
   </section>
   <section>
     <h2>Recently...</h2>
-    <p>→ Started building this site to share my ideas and projects with the world.</p>
+    <p>→ In AP CSP class we developed a XOX game on scratch. You can play it here:https://scratch.mit.edu/projects/1212301285/fullscreen/</p>
   </section>
 </body>
 </html>
