--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@
   <section>
     <h2>Featured Projects</h2>
     <ul>
-      <li><strong>Project Alpha:</strong> A web app that visualizes data in real time.</li>
+      <li><strong>XOX Game</strong> We built an XOX Game on scratch using different types of codes and variables. The game's player changes every click and there is a bear that shows who won the game or is the game tied. Game link:https://scratch.mit.edu/projects/1212301285/fullscreen/</li>
       <li><strong>Project Beta:</strong> A Swift-based iOS app for journaling ideas.</li>
     </ul>
   </section>
