--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
   </section>
   <section>
     <h2>Recently...</h2>
-    <p>→ In AP CSP class we developed a XOX game on scratch. You can play it here: https://scratch.mit.edu/projects/1212301285/fullscreen/ </p>
-  </section>
+    <p>→ In AP CSP class we developed a XOX game on scratch. You can play it here: https://scratch.mit.edu/projects/1212301285/fullscreen/</p>
+    <p>→ In AP CSP class we proggramed a basic calculator on python in collabration with pairs.</p>
+    <p>→ In AP CSP class we attempted to proggram a XOX game using the Swift coding platform.</p>
+    <p>→ In AP CSP class we built our github websites and designed</p>
+                                                                                                                                                                                  <
+  </section> https://drive.google.com/file/d/1tBK9XlknASM3rk-CeUl0Bsj6YYtnMYa9/view?usp=sharing
 </body>
 </html>
