--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>🛠️ Projects</h1>
+  <h1> Projects</h1>
   <nav>
     <a href="index.html">Home</a>
     <a href="projects.html">Projects</a>
@@ -17,7 +17,8 @@
     <h2>Featured Projects</h2>
     <ul>
       <li><strong>XOX Game</strong> We built an XOX Game on scratch using different types of codes and variables. The game's player changes every click and there is a bear that shows who won the game or is the game tied. Game link:https://scratch.mit.edu/projects/1212301285/fullscreen/</li>
-      <li><strong>Project Beta:</strong> A Swift-based iOS app for journaling ideas.</li>
+      <li><strong>Collabration:</strong> In pairs usig the collabration coding technique we programmed basic calculators in python which were able to do 5 basic calculation. Here you can reach the code and try it yourself on trinket, python3: https://docs.google.com/document/d/147RfLnWKYstK0Mdo_XRviMXJ1pmYR32QPKlWFvoKODw/edit?usp=sharing. </li>
+      <li><strong>XOX Game2</strong> We attempted to build a XOX Game on swift using different types of codes and variables. The game's player changes every click, and a reset button to reset the game. İf you will you may import the following file to Swift playground and test it: https://drive.google.com/file/d/184GLyJ2rVllMXOBelU_tvEU76TB0xjcZ/view?usp=sharing</li>
     </ul>
   </section>
 </body>
