--- a/big-ideas.html
+++ b/big-ideas.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>💡 Big Ideas</h1>
+  <h1>Big Ideas</h1>
   <nav>
     <a href="index.html">Home</a>
     <a href="projects.html">Projects</a>
@@ -14,8 +14,8 @@
     <a href="swift-code.html">Swift Code</a>
   </nav>
   <section>
-    <h2>Thoughts Worth Sharing</h2>
-    <p>1. AP CSP Coding Collabration In AP CSP class we attempted making a machine that was able to do 5 basic calculations (addition, multiplication, division, subtraction, modulo) with the numbers entered by the user. We made this app in pairs, while one of us worked the other one was checking the code and was giving advice while roles switched out every 5 minutes. This way we very little errors which we fixed very quickly and made a working code. It had benefit compared to coding alone, it made better results in shorter time.</p>
-  </section>
-</body>
-</html>
+    <h2>1.1 Collaboration:</h2><p>Computer invations are new things that come up that are related to coding or computers. An example of this was a new super Mario Brothers Game and it had roots in collabration of the producer and the user by the user giving feedback and therefore the producer improving the game.<p>
+     <h2>1.2. Programme Design and Development:</h2><p>In program design after the basic program is out the developer has to rely artially on the user/tester as they give beneficial feedback to improve it and develop the app to its final form and to get more attention.<p>
+     <h2>1.3. Programme Function and Purpose:</h2><p>A programs fuction and purpose are fdifferent. The purpose is the original intended funtion. Lİke whatsapp as a safe way to chat but as more people started using it and more feedback came the developer acted accordingly and now you can share histories do calls send voice messages and so on and thats its function compared to chatting being its purpose.<p>
+     <h2>1.4. Identifying and Correcting Errors:</h2><p>There is 4 basic errors. A logic error which works but doesnt do what its intended for, a sytax(type) error an overflow error and a run-time error. There are different ways to trace the bugs and fix them such as testing the code, hand tracing, using debuggers, using visualizations and extra print statements.<p>
+   
