--- a/documentation.html
+++ b/documentation.html
@@ -18,7 +18,7 @@
     <p>We encountered some difficulties in our project such as some errors. Usually the errors were minimal and the code was short so it was not very difficult solve. Also most errors were either logic errors or writing errors.</p>
     <h2>XOX Scratch</h2>
     <p>This section there was more and more difficult errors. The main problem was setting up the winner detector. For this I did the following code. Under changing costumes of each box to its X or O form for example it was like if costume changed to constume for x bellow it a variable I defined a 1a if it was the first square was set to one and if O to 1b nd so on. and then I added another character which would tell the score like a bear and then I started a forever loop under when start is clicked and inside it an if else look. İnside the if there was every option of the numbers with a's therefore under it it wrote X wins and there was else. Under else there was another if block meant for if O won and if it was not it either and 8 or 9 clicks were completed i.e all boxes was filled the game said it was a tie.</p>
-     <h2>XOX Scratch</h2>
+     <h2>XOX Swift</h2>
     <p>This one was the most difficult by far. I was not able to complete it fully. we used VStake and HSTake and some box codes to make grid basically and added X and O adder. But the winner detector was so difficult I believe or I was just not able to understand how to do it and got stuck.</p>
   </section>
 </body>
