--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
     <p>→ In AP CSP class we attempted to proggram a XOX game using the Swift coding platform.</p>
     <p>→ In AP CSP class we built our github websites and designed</p>
                                                                                                                                                                                   <
-  </section> https://drive.google.com/file/d/1tBK9XlknASM3rk-CeUl0Bsj6YYtnMYa9/view?usp=sharing
+  </section> 
 </body>
 </html>
