--- a/projects.html
+++ b/projects.html
@@ -19,6 +19,13 @@
       <li><strong>XOX Game</strong> We built an XOX Game on scratch using different types of codes and variables. The game's player changes every click and there is a bear that shows who won the game or is the game tied. Game link:https://scratch.mit.edu/projects/1212301285/fullscreen/</li>
       <li><strong>Collabration:</strong> In pairs usig the collabration coding technique we programmed basic calculators in python which were able to do 5 basic calculation. Here you can reach the code and try it yourself on trinket, python3: https://docs.google.com/document/d/147RfLnWKYstK0Mdo_XRviMXJ1pmYR32QPKlWFvoKODw/edit?usp=sharing. </li>
       <li><strong>XOX Game2</strong> We attempted to build a XOX Game on swift using different types of codes and variables. The game's player changes every click, and a reset button to reset the game. İf you will you may import the following file to Swift playground and test it: https://drive.google.com/file/d/184GLyJ2rVllMXOBelU_tvEU76TB0xjcZ/view?usp=sharing</li>
+      <li><strong>Swift Calculator</strong> We made a simple calculator with basic calculations on swift. <a https://docs.google.com/document/d/1732RytvfHrHskbhTikeJU_98_4YMczR0KjSV9rULJDg/edit?usp=sharing">Click here to reach the code</a></li>
+       <li><strong>XOX Swift</strong> We made a simple XOX game with basic codes on swift. https://docs.google.com/document/d/13TNhuRMQ7j-K6NBtLO9Y_eNj-e-y3O7R0LlUs66XwRM/edit?usp=sharing
+       <li><strong>Portrait</strong> https://docs.google.com/document/d/15AFtdfaWR9VKHlnvBfIyBbupwEchPld-uuh4Ycuh-1w/edit?usp=sharing<a>
+       <li><strong>Clock V1</strong> https://docs.google.com/document/d/18expBD6AwlZIQpY604m0uFkGJwGmPYbuNR8uIra6raw/edit?usp=sharing</a></li>
+    </ul>
+    </ul>
+    </ul>
     </ul>
   </section>
 </body>
