--- a/projects.html
+++ b/projects.html
@@ -23,8 +23,8 @@
        <li><strong>XOX Swift</strong> We made a simple XOX game with basic codes on swift. https://docs.google.com/document/d/13TNhuRMQ7j-K6NBtLO9Y_eNj-e-y3O7R0LlUs66XwRM/edit?usp=sharing
        <li><strong>Portrait</strong> https://docs.google.com/document/d/15AFtdfaWR9VKHlnvBfIyBbupwEchPld-uuh4Ycuh-1w/edit?usp=sharing<a>
        <li><strong>Clock V1</strong> https://docs.google.com/document/d/18expBD6AwlZIQpY604m0uFkGJwGmPYbuNR8uIra6raw/edit?usp=sharing</a></li>
-       <li><strong>Clock V2</strong> We upgraded out clock V1 and had multiple inputs but with the same principle. Document: TBA</a></li>
-       <li><strong>Clock V3</strong> We upgraded the Clock V1 again and created overlays for the clock like a gym plate for morning and a cresent moon for the night. Respiratory:TBA </a></li>
+       <li><strong>Clock V2</strong> We upgraded out clock V1 and had multiple inputs but with the same principle. Document: https://docs.google.com/document/d/1vd1XyWxXV0GaqtsHahxFwf__FvoegtkHxA2dEOnRj4w/edit?usp=sharing</a></li>
+       <li><strong>Clock V3</strong> We upgraded the Clock V1 again and created overlays for the clock like a gym plate for morning and a cresent moon for the night. Respiratory:https://github.com/omererdogan-sys/omererdoganclockv2 </a></li>
     </ul>
     </ul>
     </ul>
