--- a/documentation.html
+++ b/documentation.html
@@ -42,6 +42,9 @@
     <h2>Clock V5</h2>
     <p>In this we had foreach loop which was not too hard to cover but the hardest was linking the random hour and the rectangle's position which used a similiar code to the following: var ba=Double(hours) * 30</p>
 
+     <h2>Decimal Binary</h2>
+    <p></p>
+
     
   </section>
 </body>
