--- a/projects.html
+++ b/projects.html
@@ -16,28 +16,27 @@
   <section>
     <h2>Featured Projects</h2>
     <ul>
-      <subtitle><strong>XOX Game</subtitle> We built an XOX Game on scratch using different types of codes and variables. The game's player changes every click and there is a bear that shows who won the game or is the game tied. Game link:https://scratch.mit.edu/projects/1212301285/fullscreen/</li> <a href="swift-code.html">Swift Code</a>
-      <img src="images/logo.png" alt="Logo" />
+      <h3 href="index.html">XOX Game</h3>
      <li><subtitle> </subtitle> </a></li>
-      <li><subtitle>Collabration:</subtitle> In pairs usig the collabration coding technique we programmed basic calculators in python which were able to do 5 basic calculation. Here you can reach the code and try it yourself on trinket, python3: https://docs.google.com/document/d/147RfLnWKYstK0Mdo_XRviMXJ1pmYR32QPKlWFvoKODw/edit?usp=sharing. </li> <a href="swift-code.html">Swift Code</a>
+      <h3 href="index.html">Collabration</h3>
       <li><subtitle> </subtitle> </a></li>
-      <li><subtitle>XOX Game2</subtitle> We attempted to build a XOX Game on swift using different types of codes and variables. The game's player changes every click, and a reset button to reset the game. İf you will you may import the following file to Swift playground and test it: https://drive.google.com/file/d/184GLyJ2rVllMXOBelU_tvEU76TB0xjcZ/view?usp=sharing</li> <a href="swift-code.html">Swift Code</a>
+      <h3 href="index.html">Swift XOX</h3>
       <li><subtitle> </subtitle> </a></li>
-      <li><subtitle>Swift Calculator</subtitle> We made a simple calculator with basic calculations on swift. <a https://docs.google.com/document/d/1732RytvfHrHskbhTikeJU_98_4YMczR0KjSV9rULJDg/edit?usp=sharing">Click here to reach the code</a></li> <a href="swift-code.html">Swift Code</a>
+      <h3 href="index.html">Swift Calculator</h3>
       <li><subtitle> </subtitle> </a></li>
-      <li><subtitle>XOX Swift</subtitle> We made a simple XOX game with basic codes on swift. https://docs.google.com/document/d/13TNhuRMQ7j-K6NBtLO9Y_eNj-e-y3O7R0LlUs66XwRM/edit?usp=sharing <a href="swift-code.html">Swift Code</a>
+      <h3 href="index.html">XOX Swift</h3>
       <li><subtitle> </subtitle> </a></li>
-      <li><subtitle>Portrait</subtitle> https://docs.google.com/document/d/15AFtdfaWR9VKHlnvBfIyBbupwEchPld-uuh4Ycuh-1w/edit?usp=sharing<a> <a href="swift-code.html">Swift Code</a>
+      <h3 href="index.html">Portrait</h3>
       <li><subtitle> </subtitle> </a></li>
-        <li><subtitle>Clock V1</subtitle> https://docs.google.com/document/d/18expBD6AwlZIQpY604m0uFkGJwGmPYbuNR8uIra6raw/edit?usp=sharing</a></li> <a href="swift-code.html">Swift Code</a>
+      <h3 href="index.html">Clock V1</h3>
        <li><subtitle> </subtitle> </a></li>
-      <li><subtitle>Clock V2</subtitle> We upgraded out clock V1 and had multiple inputs but with the same principle. Document: https://docs.google.com/document/d/1vd1XyWxXV0GaqtsHahxFwf__FvoegtkHxA2dEOnRj4w/edit?usp=sharing</a></li> <a href="swift-code.html">Swift Code</a>
+      <h3 href="index.html">Clock V2</h3>
       <li><subtitle> </subtitle> </a></li>
-      <li><subtitle>Clock V3</subtitle> We upgraded the Clock V1 again and created overlays for the clock like a gym plate for morning and a cresent moon for the night. Respiratory:https://github.com/omererdogan-sys/omererdoganclockv2 </a></li> <a href="swift-code.html">Swift Code</a>
+      <h3 href="index.html">Clock V3</h3>
       <li><subtitle> </subtitle> </a></li>
-      <li><subtitle>Clock V5</subtitle> </a></li>
+     <h3 href="index.html">Clock V5</h3>
       <li><subtitle> </subtitle> </a></li>
-      <li><subtitle>Decimal to Binary</subtitle> </a></li>
+      <h3 href="index.html">Decimal to Binary</h3>
       
     </ul>
     </ul>
