--- a/projects.html
+++ b/projects.html
@@ -17,26 +17,24 @@
     <h2>Featured Projects</h2>
     <ul>
       <h3 href="index.html">XOX Game</h3>
-     <li><subtitle> </subtitle> </a></li>
-      <h3 href="index.html">Collabration</h3>
-      <li><subtitle> </subtitle> </a></li>
-      <h3 href="index.html">Swift XOX</h3>
-      <li><subtitle> </subtitle> </a></li>
-      <h3 href="index.html">Swift Calculator</h3>
-      <li><subtitle> </subtitle> </a></li>
-      <h3 href="index.html">XOX Swift</h3>
-      <li><subtitle> </subtitle> </a></li>
-      <h3 href="index.html">Portrait</h3>
-      <li><subtitle> </subtitle> </a></li>
-      <h3 href="index.html">Clock V1</h3>
-       <li><subtitle> </subtitle> </a></li>
-      <h3 href="index.html">Clock V2</h3>
-      <li><subtitle> </subtitle> </a></li>
-      <h3 href="index.html">Clock V3</h3>
-      <li><subtitle> </subtitle> </a></li>
-     <h3 href="index.html">Clock V5</h3>
-      <li><subtitle> </subtitle> </a></li>
-      <h3 href="index.html">Decimal to Binary</h3>
+     <h3 h3>
+      <h3 href="Pyhton-Calculator.python">Collabration</h3>
+      <h3 h3>
+      <h3 href="Swidt_calculator.swiftmp">Swift Calculator</h3>
+      <h3 h3>
+      <h3 href="Swift-XOX.swiftpm">XOX Swift</h3>
+      <h3 h3>
+      <h3 href="Portrait.swiftmp">Portrait</h3>
+      <h3 h3>
+      <h3 href="ClockV1.swiftmp">Clock V1</h3>
+       <h3 h3>
+      <h3 href="Clock-V2.swiftmp">Clock V2</h3>
+      <h3 h3>
+      <h3 href="Clock V3.swift">Clock V3</h3>
+      <h3 h3>
+     <h3 href="Clock-V5.swiftmp">Clock V5</h3>
+      <h3 h3>
+      <h3 href="Decimal-Binar.swiftmp">Decimal to Binary</h3>
       
     </ul>
     </ul>
