--- a/projects.html
+++ b/projects.html
@@ -16,25 +16,25 @@
   <section>
     <h2>Featured Projects</h2>
     <ul>
-      <h3 href="index.html">XOX Game</h3>
+      <a href="">XOX Game</a>
      <h3 h3>
-      <h3 href="Pyhton-Calculator.python">Collabration</h3>
+      <a href="Pyhton-Calculator.python">Collabration</a>
       <h3 h3>
-      <h3 href="Swidt_calculator.swiftmp">Swift Calculator</h3>
+      <a href="Swidt_calculator.swiftmp">Swift Calculator</a>
       <h3 h3>
-      <h3 href="Swift-XOX.swiftpm">XOX Swift</h3>
+      <a href="Swift-XOX.swiftpm">XOX Swift</a>
       <h3 h3>
-      <h3 href="Portrait.swiftmp">Portrait</h3>
+      <a href="Portrait.swiftmp">Portrait</a>
       <h3 h3>
-      <h3 href="ClockV1.swiftmp">Clock V1</h3>
+      <a href="ClockV1.swiftmp">Clock V1</a>
        <h3 h3>
-      <h3 href="Clock-V2.swiftmp">Clock V2</h3>
+      <a href="Clock-V2.swiftmp">Clock V2</a>
       <h3 h3>
-      <h3 href="Clock V3.swift">Clock V3</h3>
+      <a href="Clock V3.swift">Clock V3</a>
       <h3 h3>
-     <h3 href="Clock-V5.swiftmp">Clock V5</h3>
+     <a href="Clock-V5.swiftmp">Clock V5</a>
       <h3 h3>
-      <h3 href="Decimal-Binar.swiftmp">Decimal to Binary</h3>
+      <a href="Decimal-Binar.swiftmp">Decimal to Binary</a>
       
     </ul>
     </ul>
