--- a/projects.html
+++ b/projects.html
@@ -18,23 +18,23 @@
     <ul>
       <a href="">XOX Game</a>
      <h3 h3>
-      <a href="Pyhton-Calculator.python">Collabration</a>
+      <a href="https://github.com/omererdogan-sys/omererdogan.github.io/blob/main/Python-Calculator/Python-Calculator.python">Collabration</a>
       <h3 h3>
-      <a href="Swidt_calculator.swiftmp">Swift Calculator</a>
+      <a href="https://github.com/omererdogan-sys/omererdogan.github.io/blob/main/Swift-Calculator/Swidt_calculator.swiftpm">Swift Calculator</a>
       <h3 h3>
-      <a href="Swift-XOX.swiftpm">XOX Swift</a>
+      <a href="https://github.com/omererdogan-sys/omererdogan.github.io/blob/main/Swift-XOX/Swift-XOX.swiftpm">XOX Swift</a>
       <h3 h3>
-      <a href="Portrait.swiftmp">Portrait</a>
+      <a href="https://github.com/omererdogan-sys/omererdogan.github.io/blob/main/Portrait/Portrait.swiftpm">Portrait</a>
       <h3 h3>
-      <a href="ClockV1.swiftmp">Clock V1</a>
+      <a href="https://github.com/omererdogan-sys/omererdogan.github.io/blob/main/Clock_V1/ClockV1.swiftpm">Clock V1</a>
        <h3 h3>
-      <a href="Clock-V2.swiftmp">Clock V2</a>
+      <a href="https://github.com/omererdogan-sys/omererdogan.github.io/blob/main/Clock_V2/Clock-V2.swiftmp">Clock V2</a>
       <h3 h3>
-      <a href="Clock V3.swift">Clock V3</a>
+      <a href="https://github.com/omererdogan-sys/omererdogan.github.io/blob/main/Clock_V3/Clock%20V3.swift">Clock V3</a>
       <h3 h3>
-     <a href="Clock-V5.swiftmp">Clock V5</a>
+     <a href="https://github.com/omererdogan-sys/omererdogan.github.io/blob/main/Clock_V5/Clock-V5.swiftmp">Clock V5</a>
       <h3 h3>
-      <a href="Decimal-Binar.swiftmp">Decimal to Binary</a>
+      <a href="https://github.com/omererdogan-sys/omererdogan.github.io/blob/main/Decimal-Binary/Decimal-Binar.swiftpm">Decimal to Binary</a>
       
     </ul>
     </ul>
