--- a/documentation.html
+++ b/documentation.html
@@ -14,6 +14,8 @@
     <a href="swift-code.html">Swift Code</a>
   </nav>
   <section>
+    <h2>Github Website</h2>
+    <p>During the process the first issue was adding multiple pages which was solved pretty quickly then for projects I embedded links in the project names and it now looks like it works properly but for aesthetics the websşte is still lacking but fills the purpose I used mostly html's for the website. </p>
     <h2>Collabration</h2>
     <p>We encountered some difficulties in our project such as some errors. Usually the errors were minimal and the code was short so it was not very difficult solve. Also most errors were either logic errors or writing errors.</p>
 
@@ -47,9 +49,12 @@
     <h2>Ice Cream Overflow</h2>
     <p>In this code we were given an outline by the teacher and defining variable colors took my attention. Also there was not much errors when I did. What we did was add the code for each of the buttons and add the scoops visualy and make them have the color scoop1 for first scoop for example and so on.</p>
     
+     <h2>Frog Escape</h2>
+    <p>Firstly the part about making the timer and maving the objects move and making obstacles and detect touching looked hard but now after strong help and basing my code of off AI and seeking understanding of it I can write a similar code and for the rest of my documantation: What was the hardest part of timing logic? The hardest part of the timing was not much but likely functions related to it which I got help from chatgpt via cheatsheet. I still have a dunction not fully understood but I got over all the difficulites to my understanding (almost) with help and code from chatgpt. Now I believe by questioning and trying to understand I can write the code of the game fully or near fully maybe even a little upgraded with little (possibly) help, where as I wrote the code trying to understand everypand every part of chatgpt and doing mostly so and then pasting it and doing a minor adjustment and some additions like adding a clock for the timer that works with the time variable. How did you use if, for, and functions? if's was used to detect if the user was touchinf any obstacles or the blue goal mainly, and also to detect if the game was over as a result of it and likely some more. functions were used for example to run when game's over or for a new level or time's for levels and such. What happens when your clock overflows? It says game over and asks to restart with the new button. It resets on time(not levels as I think its for time but may add it if its required.</p>
   </section>
 </body>
 </html>
   </section>
 </body>
 </html>
+
