--- a/projects.html
+++ b/projects.html
@@ -39,11 +39,12 @@
        <a href="https://github.com/omererdogan-sys/omererdogan.github.io/blob/main/Ice-Cream-Overflow/Ice-cream-overflow.swift">Ice Cream Overflow</a>
          <h3 h3>
        <a href="https://github.com/omererdogan-sys/omererdogan.github.io/blob/main/Frog_Espcape/Frog%20Escape.swift">Frog Escape</a>
-
+        <h3 h3>
+       <a href="https://scratch.mit.edu/projects/1212301285">Scratch XOX</a>
     </ul>
     </ul>
     </ul>
     </ul>
     </ul>
   </section>
-</body> https://github.com/omererdogan-sys/omererdogan.github.io/blob/main/Frog_Espcape/Frog%20Escape.swift
+</body> https://scratch.mit.edu/projects/1212301285
