--- a/projects.html
+++ b/projects.html
@@ -41,6 +41,10 @@
        <a href="https://github.com/omererdogan-sys/omererdogan.github.io/blob/main/Frog_Espcape/Frog%20Escape.swift">Frog Escape</a>
         <h3 h3>
        <a href="https://scratch.mit.edu/projects/1212301285">Scratch XOX</a>
+          <h3 h3>
+       <a href="https://github.com/omererdogan-sys/omererdogan.github.io/blob/main/Initials-with-code/Initials.swift">Initials with Code</a>
+            <h3 h3>
+       <a href="https://github.com/omererdogan-sys/omererdogan.github.io/blob/main/Initials-with-code/Initials.swift">Chocalot Machine/a>
     </ul>
     </ul>
     </ul>
