--- a/documentation.html
+++ b/documentation.html
@@ -51,6 +51,12 @@
     
      <h2>Frog Escape</h2>
     <p>Firstly the part about making the timer and maving the objects move and making obstacles and detect touching looked hard but now after strong help and basing my code of off AI and seeking understanding of it I can write a similar code and for the rest of my documantation: What was the hardest part of timing logic? The hardest part of the timing was not much but likely functions related to it which I got help from chatgpt via cheatsheet. I still have a dunction not fully understood but I got over all the difficulites to my understanding (almost) with help and code from chatgpt. Now I believe by questioning and trying to understand I can write the code of the game fully or near fully maybe even a little upgraded with little (possibly) help, where as I wrote the code trying to understand everypand every part of chatgpt and doing mostly so and then pasting it and doing a minor adjustment and some additions like adding a clock for the timer that works with the time variable. How did you use if, for, and functions? if's was used to detect if the user was touchinf any obstacles or the blue goal mainly, and also to detect if the game was over as a result of it and likely some more. functions were used for example to run when game's over or for a new level or time's for levels and such. What happens when your clock overflows? It says game over and asks to restart with the new button. It resets on time(not levels as I think its for time but may add it if its required.</p>
+    
+     <h2>Initials with Code/h2>
+    <p>This was kind of srait forward this was done using circles. As it was supposed to be 10x10 I used offset to get the same axis parts away from each. I also simulated the cşrcles using foreach and 10 times then made like some of the last circles be in the same place so it looks 10x10 instead of like 11x10 I also used H stack and V stack seperately according to the line required and irs need of axis.</p>
+
+    <h2>Chocalot Machine</h2>
+    <p>I couldn't achive this perfectly with some errors, I think as minor. I intend to try to fix it by the night of the 26th, as I completed the code a few days ago and didn't realize any major error but now checking when uploading it I saw some. But my code was basically a function which works with real life minutes and a variable temp and everytime the minute increases temp increases by 5 and according to the temp the answer is given what to do.</p>
   </section>
 </body>
 </html>
