--- a/documentation.html
+++ b/documentation.html
@@ -56,7 +56,19 @@
     <p>This was kind of srait forward this was done using circles. As it was supposed to be 10x10 I used offset to get the same axis parts away from each. I also simulated the cşrcles using foreach and 10 times then made like some of the last circles be in the same place so it looks 10x10 instead of like 11x10 I also used H stack and V stack seperately according to the line required and irs need of axis.</p>
 
     <h2>Chocalot Machine</h2>
-    <p>I couldn't achive this perfectly with some errors, I think as minor. I intend to try to fix it by the night of the 26th, as I completed the code a few days ago and didn't realize any major error but now checking when uploading it I saw some. But my code was basically a function which works with real life minutes and a variable temp and everytime the minute increases temp increases by 5 and according to the temp the answer is given what to do.</p>
+    <p>I couldn't achive this perfectly with some errors, I think as minor. I intend to try to fix it by the night of the 26th (I believe I forgot to but I will try to have a look as soon as possible), as I completed the code a few days ago and didn't realize any major error but now checking when uploading it I saw some. But my code was basically a function which works with real life minutes and a variable temp and everytime the minute increases temp increases by 5 and according to the temp the answer is given what to do.</p>
+
+    <h2>Array Map V1</h2>
+    <p>Here it was really basic. We choose 4 items from a topic and we kind of displayed it. It didnt have any notable mistakes as I remember and is not too difficult to replicate.</p>
+       
+     <h2>World Clock V1</h2>
+    <p>It was an easy project. It was also just creating a list and displaying it so not much difficulty I faced if I had to explain simply.</p>
+
+    <h2>Ice Cream/Color</h2>
+    <p>What I did for this simply was like the following. I used for each loops to display the list which consisted of colors and for some design I put the same colored renctangles behind it so a ZStack was used for it. but not to get colors and color lists and get too complicated I didnt useaforeach to display the rectangles.</p>
+
+       <h2>Pixel Painter</h2>
+    <p>For this I had 2 foreach's one for vertical one for horizontal simulation and it both had their own code to show rectangle and display the number and a variable color was used which changed as a new number was added to change the color and every time a new member was added after 5th one it replaced the oldest one.</p>
   </section>
 </body>
 </html>
