Update navigation and header in projects.html

--- a/projects.html
+++ b/projects.html
@@ -142,10 +142,13 @@
         <span>Showcase</span>
       </div>
       <div>
-        <a href="#projects" aria-current="page">Projects</a>
-        <a href="#about">About</a>
-        <a href="#contact">Contact</a>
-      </div>
+ <h1> Ömer Erdoğan</h1>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="projects.html">Projects</a>
+    <a href="big-ideas.html">Big Ideas</a>
+    <a href="documentation.html">Documentation</a>
+    <a href="swift-code.html">Swift Code</a>
     </nav>
   </header>
 
